	* arch/arm/src/sama5/sam_nand.c and .h:  Framework for an MTD driver
	  that will provide raw access to NAND (2013-11-15).
	* configs/sama5d3x-ek/src/sam_nandflash.c:  Provides board-specific
	  memory controller initialize for NAND flash (2013-11-15).
	* include/nuttx/mtd/mtd.h:  Move include/nutt/mtd.h to
	  include/nuttx/mtd/mtd.h where it will, hopefully, soon be joined by
	  other MTD-related header files (2013-11-15).
	* drivers/mtd/mtd_onfi.c and include/nuttx/mtd/onfi.h:  Add sharedi
	  NAND routines for use with ONFI compatible NAND FLASH devices
	  (2013-11-15).
	* configs/ea3131/src/up_usbhost.c:  Board-specific USB host support
	  for the EA3131 board (2013-11-15).
	* drivers/mtd/mtd_nand.c, include/nuttx/mtd/nand.h, nand_config.h,
	  and nand_scheme.h:  Further NAND support (still incomplete).
	  (2013-11-16).
	* drivers/mtd/mtd_modeltab.c:  Further NAND support (still incomplete).
	  (2013-11-16).
	* drivers/mtd/mtd_nandmodel.c: More NAND support (same story).
	  (2013-11-16).
	* drivers/mtd/mtd_rawnand.c and include/nuttx/mtd/nand_raw.h: More
	  NAND support (2013-11-17).
	* drivers/mtd/mtd_nandscheme.c:  More NAND support (2013-11-17).
	* include/nuttx/mtd/nand_ecc.h: More NAND (2013-11-17).
	* drivers/mtd/hamming.c and mtd_nandecc.c and
	  include/nuttx/mtd/hamming.h:  Beginning of NAND software ECC
	  calculations. (2013-11-18).
	* configs/olimex-lpc-h3131:  Add support for the Olimex LPC-H3131
	* board.  Does not yet boot (2013-11-18).
	* arch/arm/src/lpc31xx/lpc31_ehci.c:  Add USB host trace support
	  (2013-11-19).
	* configs/olimex-lpc-h3131/include/board.h, src/lpc31_boot.c,
	  lpc31_leds.c, lpc31_usbhost.c, and lpc_h3131.h:  Add GPIO 
	  support for LED1/2 and for USB power enable and overcurrent
	  detection (2013-11-19).
	* configs/olimex-lpc-h3131/nsh/defconfig:  Drop loops-per-msec
	  count for the Olimex-LPC-H3131.  It seems to be about 25% as
	  fast as the Embedded Artists EA3131 at the same clocking.
	  (2013-11-19).